syntax = "proto2";
package org.acme.travels.travels;
import "kogito-index.proto";
import "kogito-types.proto";
option kogito_model = "Travels";
option kogito_id = "travels";

/* @Indexed */
message Address {
    option java_package = "org.acme.travels.travels";
    /* @Field(store = Store.YES, analyze = Analyze.YES) */
    optional string city = 1;
    /* @Field(store = Store.YES, analyze = Analyze.YES) */
    optional string country = 2;
    /* @Field(store = Store.YES, analyze = Analyze.YES) */
    optional string street = 3;
    /* @Field(store = Store.YES, analyze = Analyze.YES) */
    optional string zipCode = 4;
}

/* @Indexed */
message Flight {
    option java_package = "org.acme.travels.travels";
    /* @Field(store = Store.YES, analyze = Analyze.YES) */
    optional kogito.Date arrival = 1;
    /* @Field(store = Store.YES, analyze = Analyze.YES) */
    optional kogito.Date departure = 2;
    /* @Field(store = Store.YES, analyze = Analyze.YES) */
    optional string flightNumber = 3;
    /* @Field(store = Store.YES, analyze = Analyze.YES) */
    optional string gate = 4;
    /* @Field(store = Store.YES, analyze = Analyze.YES) */
    optional string seat = 5;
}

/* @Indexed */
message Hotel {
    option java_package = "org.acme.travels.travels";
    optional Address address = 1;
    /* @Field(store = Store.YES, analyze = Analyze.YES) */
    optional string bookingNumber = 2;
    /* @Field(store = Store.YES, analyze = Analyze.YES) */
    optional string name = 3;
    /* @Field(store = Store.YES, analyze = Analyze.YES) */
    optional string phone = 4;
    /* @Field(store = Store.YES, analyze = Analyze.YES) */
    optional string room = 5;
}

/* @Indexed */
message Traveller {
    option java_package = "org.acme.travels.travels";
    optional Address address = 1;
    /* @Field(store = Store.YES, analyze = Analyze.YES) */
    optional string email = 2;
    /* @Field(store = Store.YES, analyze = Analyze.YES) */
    optional string firstName = 3;
    /* @Field(store = Store.YES, analyze = Analyze.YES) */
    optional string lastName = 4;
    /* @Field(store = Store.YES, analyze = Analyze.YES) */
    optional string nationality = 5;
}

/* @Indexed */
message Travels {
    option java_package = "org.acme.travels.travels";
    /* @Field(store = Store.YES, analyze = Analyze.YES) */
    optional Flight flight = 1;
    /* @Field(store = Store.YES, analyze = Analyze.YES) */
    optional Hotel hotel = 2;
    /* @Field(store = Store.YES, analyze = Analyze.YES) */
    optional string id = 3;
    /* @Field(store = Store.YES, analyze = Analyze.YES) */
    optional Traveller traveller = 4;
    /* @Field(store = Store.YES, analyze = Analyze.YES) */
    optional Trip trip = 5;
    /* @Field(store = Store.YES, analyze = Analyze.YES) */
    optional VisaApplication visaApplication = 6;
    /* @Field(store = Store.YES, analyze = Analyze.YES) */
    repeated org.kie.kogito.index.model.ProcessInstanceMeta processInstances = 7;
}

/* @Indexed */
message Trip {
    option java_package = "org.acme.travels.travels";
    /* @Field(store = Store.YES, analyze = Analyze.YES) */
    optional kogito.Date begin = 1;
    /* @Field(store = Store.YES, analyze = Analyze.YES) */
    optional string city = 2;
    /* @Field(store = Store.YES, analyze = Analyze.YES) */
    optional string country = 3;
    /* @Field(store = Store.YES, analyze = Analyze.YES) */
    optional kogito.Date end = 4;
    /* @Field(store = Store.YES, analyze = Analyze.YES) */
    optional bool visaRequired = 5;
}

/* @Indexed */
message VisaApplication {
    option java_package = "org.acme.travels.travels";
    /* @Field(store = Store.YES, analyze = Analyze.YES) */
    optional string city = 1;
    /* @Field(store = Store.YES, analyze = Analyze.YES) */
    optional string country = 2;
    /* @Field(store = Store.YES, analyze = Analyze.YES) */
    optional int32 duration = 3;
    /* @Field(store = Store.YES, analyze = Analyze.YES) */
    optional string firstName = 4;
    /* @Field(store = Store.YES, analyze = Analyze.YES) */
    optional string lastName = 5;
    /* @Field(store = Store.YES, analyze = Analyze.YES) */
    optional string nationality = 6;
    /* @Field(store = Store.YES, analyze = Analyze.YES) */
    optional string passportNumber = 7;
}